crates/tui/tests/snapshots/actions__vm_menu_grouped.snap
---
source: crates/tui/tests/actions.rs
expression: "app.snapshot(120, 40).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                        ╭ act on web-01 ──────────────────────────────────────────────────╮
╰─────────────────────────────────────│▌ Power on                                                    [p]│1.0 · pc.2024.3
╭ nutsh ───────────────╮╭ Virtual Mach│  Power off (cuts power)                                      [P]│──────────────╮
│  ▸ Dashboard         ││  NAME       │  Power cycle (cuts power)                                       │        MEM   │
│  ▾ Compute & Storage ││▌ web-01     │  Reset (cuts power)                                             │113.11  8 GiB │
│      Overview        ││  web-02     │  Shut down (ACPI, asks the guest)                            [d]│        4 GiB │
│    • VMs [3]         ││  db-01      │  Shut down (guest tools)                                     [D]│        32 GiB│
│      ESXi VMs        ││             │  Reboot (ACPI, asks the guest)                               [r]│              │
│      Templates       ││             │  Reboot (guest tools)                                        [R]│              │
│      Images          ││             │  Migrate to another cluster                                     │              │
│      OVAs            ││             │  Migrate to host                                             [m]│              │
│      VM Profiles     ││             │  Clone                                                       [C]│              │
│      Guest Customizat││             │  Create recovery point                                       [s]│              │
│      Storage Containe││             │  Revert to a recovery point                                     │              │
│      Volume Groups   ││             │  Delete                                                 [ctrl-d]│              │
│      Storage Policies││             │  ──────────────────────── raw API names ────────────────────────│              │
│      Categories      ││             │  add-custom-attributes                                          │              │
│      Catalog Items   ││             │  assign-owner                                                   │              │
│  ▸ Network & Security││             │  associate-categories                                           │              │
│  ▸ Data Protection   ││             │  create                                                         │              │
│  ▸ Hardware          ││             │  customize-guest                                                │              │
│  ▸ Monitoring        ││             │  disassociate-categories                                        │              │
│  ▸ Policies          ││             │  generate-console-token                                         │              │
│  ▸ Admin Center      ││             │  migrate-vm-disks                                               │              │
│  ▸ Files             ││             │  remove-custom-attributes                                       │              │
│  ▸ Objects           ││             │  transfer-files-to-guest                                        │              │
│  ▸ Contexts          ││             │  update                                                         │              │
│  ▸ Settings          ││             ╰─────────────────────────────────────────────────────────────────╯              │
│  ─── by namespace ───││                                                                                              │
│  ▸ aiops             ││                                                                                              │
│  ▸ clustermgmt       ││                                                                                              │
│  ▸ dataprotection    ││                                                                                              │
╰───────────────── ↓14 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
 type to filter  ↑↓ move  enter run  esc close
[meter]          ● live
