crates/tui/tests/snapshots/actions__vm_picker.snap
---
source: crates/tui/tests/actions.rs
expression: "app.snapshot(120, 40).unwrap()"
---
╭ nutsh ─────────────────────────────────────────────────────────────────────────────────────╮
│Context:    -                                                    ⏎ drill        y detail    │       clusters 1  hosts 1
│PC:         127.0.0.1:PORT  pc.2024.3                           S sort         w wide      │         vms 3  on/off 3/0
│Cluster:    <all>                                               ←→ columns     ^r refresh   │           alerts ⚠ 2  ✖ 2
│Kind:       Compute & Storage › VMs                             ^t every       ^x stop      │         tasks ▶ 4 running
│Count:      3                                                    a actions     ^c quit      │
╰────────────────────────────────────────────────────────────────────────────────────────────╯  v0.0.2-beta3 · pc.2024.3
╭ nutsh ───────────────╮╭ Virtual Machines [3] ────────────────────────────────────────────────────────────────────────╮
│  ▸ Dashboard         ││  NAME                                         POWER  CLUSTER   HOST      IP            MEM   │
│  ▾ Compute & Storage ││▌ web-01          ╭ on Virtual Machines web-01 · 15/30 ───────────────────╮03.0.113.11  8 GiB │
│      Overview        ││  web-02          │  ────────────────────── related ──────────────────────│             4 GiB │
│    • VMs [3]         ││  db-01           │▌ Cd Roms                              …hv.config.CdRom│             32 GiB│
│      ESXi VMs        ││                  │  Disks                                …ahv.config.Disk│                   │
│      Templates       ││                  │  GPUs                                 ….ahv.config.Gpu│                   │
│      Images          ││                  │  NICs                                 ….ahv.config.Nic│                   │
│      OVAs            ││                  │  PCIe Devices                         …nfig.PcieDevice│                   │
│      VM Profiles     ││                  │  Serial Ports                         …nfig.SerialPort│                   │
│      Guest Customizat││                  │  ────────────────────── actions ──────────────────────│                   │
│      Storage Containe││                  │  Power on                                          [p]│                   │
│      Volume Groups   ││                  │  Power off (cuts power)                            [P]│                   │
│      Storage Policies││                  │  Power cycle (cuts power)                             │                   │
│      Categories      ││                  │  Reset (cuts power)                                   │                   │
│      Catalog Items   ││                  │  Shut down (ACPI, asks the guest)                  [d]│                   │
│  ▸ Network & Security││                  │  Shut down (guest tools)                           [D]│                   │
│  ▸ Data Protection   ││                  │  Reboot (ACPI, asks the guest)                     [r]│                   │
│  ▸ Hardware          ││                  │  Reboot (guest tools)                              [R]│                   │
│  ▸ Monitoring        ││                  │  Migrate to another cluster                           │                   │
│  ▸ Policies          ││                  ╰────────────────────────────────────────────────── ↓15 ╯                   │
│  ▸ Admin Center      ││                                                                                              │
│  ▸ Files             ││                                                                                              │
│  ▸ Objects           ││                                                                                              │
│  ▸ Contexts          ││                                                                                              │
│  ▸ Settings          ││                                                                                              │
│  ─── by namespace ───││                                                                                              │
│  ▸ aiops             ││                                                                                              │
│  ▸ clustermgmt       ││                                                                                              │
│  ▸ dataprotection    ││                                                                                              │
╰───────────────── ↓14 ╯╰──────────────────────────────────────────────────────────────────────────────────────────────╯
 type to filter  enter open or run  esc close
[meter]          ● live
